# agency-dashboard

./: .cursorrules  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BUSINESS_OPPORTUNITIES.md  CLAUDE.md  Makefile  QWEN.md  README.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  uv.lock.example
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0001_initial.py  0002_stores_and_tokens.py  03f232cb12c4_add_internal_receipt_support_to_invoice.py  266abc62e3fa_add_unique_constraint_to_client_emails.py  46bc580c138b_add_nc_back_pointers_to_invoice.py  5561e434993b_add_sent_at_to_proposals.py  601e661d3a6f_add_cuit_and_iva_condition_to_clients.py  60feadbb188c_add_currency_estimated_days_.py  686ab7aefb17_add_address_to_client.py  813874f5ecdd_add_email_templates_table.py  87eb98fb6d79_add_afip_token_and_afip_invoice_log_.py  93481de3130b_add_client_emails_table.py  9cd2ae5ea018_create_activities_table.py  a772e515468b_add_clients_table.py  bb2101802a31_add_invoices_table.py  cbdccd9d4e33_initial_core_tables.py  d5f0bb953fbe_widen_invoice_document_number_to_bigint.py  e40b6f9184ca_add_cancelled_at_to_invoice.py  ef32bc13f2fe_add_pdf_templates_table.py  f0d0280b9e3a_add_code_issue_date_show_recipient_on_.py  f0e4f495abc8_add_proposals_and_proposal_tasks_tables.py  fb8153bb5132_create_invoices_internal_number_seq.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py
backend/app/core/: LOGGING.md  __init__.py  logging_config.py  router.py
backend/app/core/features/: __init__.py
backend/app/core/features/auth/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  service.py  tasks.py  utils.py
backend/app/core/features/health/: __init__.py  routes.py  schemas.py  service.py
backend/app/core/features/n8n/: README.md  __init__.py  routes.py  schemas.py  service.py  tasks.py
backend/app/core/features/users/: README.md  __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/core/tasks/: __init__.py  celery_app.py  n8n_tasks.py
backend/app/custom/: README.md  __init__.py
backend/app/custom/features/: README.md  __init__.py
backend/app/custom/features/activities/: constants.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/custom/features/clients/: __init__.py  messages.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/custom/features/dashboard/: routes.py  schemas.py  service.py
backend/app/custom/features/email/: __init__.py  messages.py  routes.py
backend/app/custom/features/invoices/: issuer.py  messages.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/custom/features/pdf/: __init__.py  routes.py
backend/app/custom/features/proposals/: __init__.py  code_generator.py  constants.py  (+7 more)
backend/app/shared/: __init__.py  constants.py  utils.py
backend/app/shared/afip/: README.md  __init__.py  config.py  constants.py  enums.py  exceptions.py  messages.py  models.py  qr.py  schemas.py  service.py
backend/app/shared/email/: __init__.py  models.py  schemas.py  template.py
backend/app/shared/interfaces/: __init__.py  afip_service.py  email_service.py  external_service.py  message_broker.py
backend/app/shared/pdf/: __init__.py  constants.py  generator.py  messages.py  models.py  schemas.py  template.py
backend/app/shared/repositories/: __init__.py  base_repository.py
backend/app/shared/services/: __init__.py  email_service.py  email_service_factory.py  n8n_service.py
backend/scripts/: __init__.py  afip_homo_smoke_test.py  create_superuser.py  get_tiendanube_token.py  test_tiendanube_connection.py
backend/tests/: README.md  conftest.py
backend/tests/e2e/: test_complete_workflow.py
backend/tests/factories/: __init__.py  user_factory.py
backend/tests/fixtures/: __init__.py  afip_homo_cuits.py
backend/tests/integration/api/: __init__.py  test_health_routes.py  test_n8n_routes.py  test_users_routes.py
backend/tests/integration/features/: __init__.py  test_health_feature.py  test_n8n_feature.py  test_users_feature.py
backend/tests/integration/repositories/: __init__.py  test_base_repository.py
backend/tests/performance/: test_user_performance.py
backend/tests/unit/services/: __init__.py  test_health_service.py  test_n8n_service.py  test_tiendanube_connection.py
(+313 files in other folders)
